--- a/app/sass/base/_reset.scss
+++ b/app/sass/base/_reset.scss
@@ -1,8 +1,7 @@
 body{
 	font-family: "playfair-display";
-	color: #fff;
+	color: #000;
 	font-size: 16px;
-	background-color: #333;
 }
 a{
 	text-decoration: none;
@@ -14,21 +13,32 @@ h1, h2, h3, h4, h5{
 }
 
 /* centering blocks */
-.conteiner-horisontal{
-	padding: 0px;
-	width: 100%;
-	position: relative;	
-	float: left;
-	display: block;
-}
-.conteiner-center{
-	width: 100%;
-	max-width: 1170px;
-	margin: 0px auto;
-	position: relative;
-	padding: 0px;
-	@include box-sizing;
-}
+  /* adaptive site */
+  .container-horizontal{
+  	padding: 0px;
+  	width: 100%;
+  	position: relative;	
+  	float: left;
+  	display: block;
+  }
+  .container-center{
+  	width: 100%;
+  	max-width: 1170px;
+  	margin: 0px auto;
+  	position: relative;
+  	padding: 0px;
+  	@include box-sizing;
+  }
+
+  /* not adaptive site */
+  .container-horizontal{
+    padding: 0px;
+    width: 100%;
+    min-width: 1220px;
+    position: relative; 
+    float: left;
+    display: block;
+  }
 
 /* Lists */
 ul{
@@ -88,4 +98,131 @@ ul{
 .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12{
 	padding: 0px;
 	margin: 0px;
+}
+
+/* Menu */
+.mx-headmenu {
+  height: 95px;
+  background-color: #dd8a32; }
+
+.mx-headmenu ul {
+  margin-left: 50px; }
+
+.mx-headmenu ul li {
+  float: left; }
+
+.mx-headmenu ul li a {
+  position: relative;
+  display: block;
+  font-family: 'playfair-display';
+  font-size: 19px;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 35px 32px; }
+
+.mx-headmenu ul li a span {
+  position: absolute;
+  display: none;
+  width: 100%;
+  top: 1px;
+  left: 0px;
+  border-top: 5px solid #f0d3b4; }
+
+.mx-headmenu ul li a:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+  color: #000; }
+
+.mx-headmenu ul li a:hover span {
+  display: block; }
+
+.mx-headmenu ul li.mx-active_nav a {
+  background-color: rgba(255, 255, 255, 0.3);
+  color: #000; }
+
+.mx-headmenu ul li.mx-active_nav a span {
+  display: block; }
+
+/* Popup windows */
+.mx-popup_wrap{
+  position: fixed;
+  display: none;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.4);
+}
+.mx-popup_wrap > div{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  padding: 20px;
+  padding-top: 0px;
+  border: 1px solid #9a9a9a;
+  background-color: #fefefe;
+  border-radius: 8px;
+  -moz-border-radius: 8px;
+  -webkit-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+.mx-popup_wrap > div img {
+  position: absolute;
+  margin-top: 19px;
+  width: 25px;
+  right: 22px;
+}
+.mx-popup_wrap h2{
+  font-size: 30px;
+  color: #dd8a32;
+  border-bottom: 3px solid #dcdcdc;
+  padding: 4px;
+  padding-top: 10px;
+  padding-bottom: 12px;
+}
+.mx-popup_wrap h3{
+  font-size: 22px;
+  color: #333;
+  padding-top: 10px;
+  padding-bottom: 20px;
+}
+.mx-popup_wrap p{
+  font-family: 'playfair-display';
+  display: table;
+  width: 100%;
+  margin: 0px;
+  font-size: 17px;
+  clear: both;
+  padding: 4px 0px;
+}
+.mx-popup_wrap p span{
+  color: #333;
+  display: table;
+  width: 200px;
+  float: left;
+}
+.mx-popup_wrap a{
+  font-family: 'playfair-display';
+  font-size: 17px;
+  color: #8b8b8b;
+  text-decoration: underline;
+}
+.mx-popup_wrap a:hover{
+  text-decoration: none;
+}
+.mx-popup_wrap input[type=submit]{
+  display: block;
+  width: 110px;
+  margin-right: 16px;
+  margin-top: 15px;
+  background-color: #dd8a32;
+  text-align: center;
+  color: #fff;
+  float: right;
+  font-size: 14px;
+  border-radius: 22px;
+  -moz-border-radius: 22px;
+  -webkit-border-radius: 22px;
+  -ms-border-radius: 22px;
+  -o-border-radius: 22px;
+  border: none;
 }
