--- a/app/jade/structure/_header.jade
+++ b/app/jade/structure/_header.jade
@@ -1,19 +1,39 @@
-// Menu
-.container-horizontal.mx-headmenu
-  nav.container-center
-    ul 
-      li
-        a(href="#") Главная
-      li
-        a(href="#") О нас
-      li
-        a(href="#") Проекты
-      li
-        a(href="#") Контакты
-div.
-  Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-  quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-  cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-  proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+// navigation section
+.container-horizontal.mx-nav_line
+  .container-center
+    section
+      .mx-logo
+        a(href="#" class="mx-navbar-brand")
+          img(src="img/logo.png" alt="")
+        button.mx-button_small
+          span.mx-button_icon
+          span.mx-button_icon
+          span.mx-button_icon
+
+      .mx-nav_wrap
+        ul.mx-nav
+          li.mx-nav_actie
+            a(href="#home") Главная
+          li
+            a(href="#home") Меню
+            ul
+              li
+                a(href="#") Первое
+              li
+                a(href="#") Второе
+              li
+                a(href="#") Дисерт
+          li
+            a(href="#home") О нас
+          li
+            a(href="#home") Контакты
+
+.container-horizontal
+  .container-center
+    div.
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+      quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+      consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+      cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+      proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
