Advanced adaptive menu

--- a/app/jade/structure/_header.jade
+++ b/app/jade/structure/_header.jade
@@ -1,7 +1,7 @@
 // navigation section
-.container-horizontal.mx-nav_line
+.container-horizontal.mx-head-line
   .container-center
-    section
+    section.mx-nav_line
       .mx-logo
         a(href="#" class="mx-navbar-brand")
           img(src="img/logo.png" alt="")
@@ -23,6 +23,15 @@
                 a(href="#") Второе
               li
                 a(href="#") Дисерт
+          li
+            a(href="#home") Персонал
+            ul
+              li
+                a(href="#") Директор              
+              li
+                a(href="#") Старший повар
+              li
+                a(href="#") Официант
           li
             a(href="#home") О нас
           li
