--- a/app/sass/layout/_header.scss
+++ b/app/sass/layout/_header.scss
@@ -4,22 +4,22 @@
 ======================= */
 
 /* Menu */
+.mx-head-line{
+  background-color: #1d1001;
+}
 .mx-nav_line{
   top: 0px;
   display: table;
   width: 100%;
-  color: #333;
+  color: #000;
   z-index: 998;
-  background: #1d1001;
-  border-bottom: 1px solid #ddd;
 }
 .mx-logo{
   display: table;
   float: left;
-  padding: 14px;
+  padding: 18px;
   font-size: 20px;
   font-weight: bold;
-  background: #1d1001;
 }
 .mx-logo a{
   display: table;
@@ -29,7 +29,6 @@
 
 }
 ul.mx-nav{
-  position: relative;
   display: table;
   float: right;
   margin-right: 10px;
@@ -38,9 +37,9 @@ ul.mx-nav li{
   float: left;
 }
 ul.mx-nav li a{
-  padding: 32px 10px;
+  padding: 30px 10px;
   display: block;
-  color: #939090;
+  color: #585151;
   font-size: 17px;
 }
 ul.mx-nav li a:hover{
@@ -88,7 +87,7 @@ ul.mx-nav li.mx-nav_actie a{
 }
 
 .mx-grid_4_menu{
-	margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 .mx-name_food{
     font-family: 'Merriweather-UltraBold';
@@ -101,23 +100,28 @@ ul.mx-nav{
 }
 ul.mx-nav > li > ul{
   position: absolute;
+  width: 200px;
   display: none;
   top: 80px;
-  left: 60px;
+  right: 50%;
+  margin-right: -100px;
   background-color: #1d1001;
-  border-bottom: 1px solid #ddd;
+  z-index: 887;
 }
 ul.mx-nav > li > ul > li{
   float: none;
 }
+ul.mx-nav > li > ul > li:hover{
+  background-color: #291702; 
+}
 ul.mx-nav > li > ul > li a{
-  padding: 10px 20px;
+  padding: 4px 20px;
 }
 ul.mx-nav > li:hover ul{
   display: block;
 }
 
-@media only screen and (max-width: 767px){
+@media only screen and (max-width: 768px){
   .mx-nav_line{
     background: transparent;
     border: none;
@@ -127,8 +131,6 @@ ul.mx-nav > li:hover ul{
     padding-left: 10px;
     display: block;
     width: 100%;
-    background: #1d1001;
-    overflow: hidden;
   }
   .mx-logo{
     width: 100%;
@@ -155,13 +157,16 @@ ul.mx-nav > li:hover ul{
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 100%;
+    min-height: 100%;
+    border: none;
+    background-color: #1d1001;
   }
   ul.mx-nav > li > ul > li{
     float: left;
+    width: 50%;
   }
   ul.mx-nav > li > ul > li a {
-    padding: 18px 25px;
+    padding: 10px 25px;
   }
   ul.mx-nav > li:hover ul{
     display: none;
