--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -2,7 +2,7 @@
 * ###################################################
 * #                                                 #
 * #    Author: Marko Maksym                         #
-* M    WebSite: http://blognauki.in.ua/my-works/    M
+* M    WebSite: http://mx-site.com/                 M
 * #    Project name:                                #  
 * #    PSD:                                         #
 * X    Date of creation:                            X
